--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
-serena khan
 <html>
 <head>
-<titleyourdestination></titleyourdestination> 
-    e>My github page</yourdestination>
-<style>
-.b7 {
-
-}
-
-.mybackground {
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-}
-
-.s1{
-color:#f5fcda;
-}
-
-.s2{
-  color:#f5fcda;
-
-
+  <title>Quacker Parrots</title>
+  <style>
+.bodycolor {
+  background-color:#c2fadf;
 }
 </style>
+
+</head>
+<body class="bodycolor">
+ 
+  <a href="index.html"> Your Destination! </a>
+
+</body>
+
+
+</html>
 
